--- a/template.html
+++ b/template.html
@@ -11,18 +11,48 @@
     h1 { text-align: center; color: #1a73e8; margin-bottom: 30px; }
     .stats { display: flex; justify-content: space-between; margin-bottom: 15px; }
     .card { background-color: #2a2e3d; color: white; padding: 25px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); margin-bottom: 20px; }
-    .risposta { background-color: #ffffff; color: #000; border: 2px solid #ccc; margin: 10px 0; padding: 15px 20px; border-radius: 8px; font-size: 1.2rem; font-weight: bold; }
+    .risposta { background-color: #ffffff; color: #000; border: 2px solid #ccc; margin: 10px 0; padding: 15px 20px; border-radius: 8px; font-size: 1.2rem; font-weight: bold; cursor: pointer; transition: transform 0.15s; }
+    .risposta:hover { transform: scale(1.02); }
     .corretta { background-color: #28a745; color: white; border-color: #28a745; }
     .sbagliata { background-color: #dc3545; color: white; border-color: #dc3545; }
-    button { padding: 10px 16px; margin: 5px; border: none; border-radius: 6px; background-color: #1a73e8; color: white; font-weight: bold; cursor: pointer; transition: background-color 0.2s; }
+
+    /* --- BOTTONI --- */
+    button { 
+      padding: 10px 16px; 
+      margin: 5px; 
+      border: none; 
+      border-radius: 6px; 
+      background-color: #1a73e8; 
+      color: white; 
+      font-weight: bold; 
+      cursor: pointer; 
+      transition: background-color 0.2s, transform 0.1s; 
+      opacity: 0;
+      animation: fadeInUp 0.5s ease forwards;
+    }
     button:hover { background-color: #155ab6; }
+    button:active { transform: scale(0.95); }
     .btn-danger { background-color: #d93025; }
     .btn-danger:hover { background-color: #b5271b; }
     #risposte { display: grid; gap: 1rem; }
+
     /* --- RECAP --- */
     .domandaRecap { background-color: #2f3347; padding: 15px; border-radius: 10px; margin-bottom: 20px; border: 1px solid #444; }
     .domandaRecap strong { display: block; margin-bottom: 6px; font-size: 1.1em; color: #1a73e8; }
     .domandaRecap div { margin: 4px 0; }
+
+    /* --- ANIMAZIONI --- */
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(15px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Ritardo progressivo nei pulsanti quiz */
+    #quiz-buttons button:nth-child(2) { animation-delay: 0.1s; }
+    #quiz-buttons button:nth-child(3) { animation-delay: 0.2s; }
+    #quiz-buttons button:nth-child(4) { animation-delay: 0.3s; }
+    #quiz-buttons button:nth-child(5) { animation-delay: 0.4s; }
+    #quiz-buttons button:nth-child(6) { animation-delay: 0.5s; }
   </style>
 </head>
 <body>
